# dspatch-template

./: .gitmodules  CMakeLists.txt  README.md
src/: components.h  main.cpp
